--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Patrick Luiz Dev</title>
   <meta name="viewport" content="initial-scale=1.0, width=device-width" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="./img/biglogo.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="src/img/images.png">
   <link rel="stylesheet" href="src/style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.clouds2.min.js"></script>
